# CppLearningProject

./: .gitignore  CMakeLists.txt  ItemsListWindow.cpp  ItemsListWindow.h  ItemsListWindow.ui  QGSController.cpp  QGSController.h  README.md  ZRK.drawio  chooseline.cpp  chooseline.h  chooseline.ui  database.cpp  database.h  databasecontroller.cpp  databasecontroller.h  datawindow.cpp  datawindow.h  datawindow.ui  itemslist.cpp  itemslist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object.cpp  object.h  resource.qrc
.github/workflows/: codeql.yml
Engine/: CMakeLists.txt
Engine/src/: engine.cpp  engine.h  qgspack.cpp  qgspack.h
InterfaceQT/: CMakeLists.txt  database.cpp  database.h  databasecontroller.cpp  databasecontroller.h  datawindow.cpp  datawindow.h  datawindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object.cpp  resource.qrc
InterfaceQt/: CMakeLists.txt  database.cpp  databasecontroller.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapwindow.cpp  mapwindow.h  object.h  resource.qrc
MyInterface/: CMakeLists.txt
QGSController/: CMakeLists.txt
QGSController/src/: QGSController.cpp  QGSController.h  chooseline.cpp  chooseline.h  chooseline.ui
database/: CMakeLists.txt  TECHNICALFEATURES.db  tth.db  tth.db.sqbpro
database/src/: database.cpp  database.h  databasecontroller.cpp  databasecontroller.h  jsondata.cpp  jsondata.h
img/: add_icon.pngZone.Identifier  location_icon.pngZone.Identifier
jsonData/: sams.json
maps/: map.dbf  map.shp  map.shx  map_source.txt  world-bathymetry-110-million.dbf  world-bathymetry-110-million.qml  world-bathymetry-110-million.shx  world-bathymetry-110-million.txt  world-land-areas-110-million.dbf  world-land-areas-110-million.qix  world-land-areas-110-million.qml  world-land-areas-110-million.shx  world-land-areas-110-million.txt
objects/: CMakeLists.txt  ObjectFactory.cpp  ObjectFactory.h  plane.cpp  plane.h  point.cpp  rocket.cpp  rocket.h  sam.cpp  sam.h
objects/src/: ObjectFactory.cpp  ObjectFactory.h  ObjectFactory.txt  plane.cpp  plane.h  point.cpp  point.h  rocket.cpp  rocket.h  sam.cpp  sam.h
